# casc-modern

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  NOTICE.md  README.md  SECURITY.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
crates/casc-cli/: Cargo.toml
crates/casc-cli/src/: main.rs
crates/casc-core/: Cargo.toml
crates/casc-core/src/: index.rs  lib.rs
crates/casc-core/src/formats/: dc6.rs  mod.rs  spa1.rs
crates/casclib-sys/: Cargo.toml  build.rs
crates/casclib-sys/src/: lib.rs
src/: App.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: export.rs  lib.rs  main.rs  search.rs  settings.rs  sprites.rs
src/components/: BookmarkBar.tsx  ContextMenu.tsx  DirectoryView.tsx  ExportProgressDialog.tsx  FilePreviewPanel.tsx  HexView.tsx  SearchDrawer.tsx  SettingsDrawer.tsx  StorageTree.tsx  ThumbIcon.tsx  UpdateButton.tsx
src/components/viewers/: CodeViewer.tsx  Dc6Viewer.tsx  HexViewer.tsx  ImageViewer.tsx  MediaViewer.tsx  SpriteViewer.tsx  TooLargeNotice.tsx  TsvViewer.tsx  registry.ts  types.ts
src/lib/: api.ts  changelog.ts  contextMenuItems.ts  fileIcons.tsx  imageUrl.ts  prefs.tsx  selection.ts  useExporter.ts
