[workspace]
resolver = "2"
members = [
    "crates/casclib-sys",
    "crates/casc-core",
    "crates/casc-cli",
    "src-tauri",
]

[workspace.package]
version = "0.1.3"
edition = "2021"
rust-version = "1.82"
license = "MIT"
authors = ["Poliakov Ilia (TrayHard)"]

[workspace.dependencies]
casclib-sys = { path = "crates/casclib-sys" }
casc-core = { path = "crates/casc-core" }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
rayon = "1"
bytes = "1"
regex = "1"
globset = "0.4"
memchr = "2"
image = { version = "0.25", default-features = false, features = ["png"] }
base64 = "0.22"

[profile.release]
codegen-units = 1
lto = "thin"
strip = true

[profile.dev]
incremental = true
